# fake-news-detection-ml-system-mlops

./: .cursorrules  .dockerignore  .env.example  .gitig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_DEMO.md  airflow-values.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: main.yaml  prometheus.yml  tune.yaml
configs/api/: fastapi.yaml
configs/api/telegram/: default.yaml
configs/data/: default.yaml  triplet.yaml
configs/data/source/: hf_dataset.yaml  kaggle_dataset.yaml  local_csv.yaml
configs/environment/: local.yaml  prod.yaml
configs/logger/: mlflow.yaml
configs/model/: default.yaml
configs/model/architecture/: bert_classifier.yaml  bert_multitask.yaml  bge_reranker_v2_m3.yaml  dslim_bert_base_ner.yaml  google_bert_mulitling.yaml  llama3_8b.yaml  rubert_base.yaml
configs/model/cleaner/: default.yaml
configs/model/finetuning/: full.yaml  head_only.yaml  lora.yaml
configs/paths/: default.yaml
configs/rag/: default.yaml
configs/trainer/: default.yaml
dags/: batch_analytics.py  promote_to_prod.py  quality_control.py  rag_etl_dag.py  retrain_model_dag.py  system_maintenance.py
demo/: Dockerfile  app.py  quickstart.ipynb  requirements.txt
deploy/airflow/: variables.json
deploy/k8s/: api-deployment.yaml  api-ingress.yaml  api-service.yaml  configmap.yaml  pvcs.yaml  rbac.yaml  secrets.yaml
deploy/k8s/monitoring/: kube-state-metrics.yaml  node-exporter.yaml
k8s/: api-deployment.yaml  api-ingress.yaml  api-service.yaml  configmap.yaml  pvcs.yaml
notebooks/: 01_eda_and_tokens.ipynb  02_02_generation_baseline.ipynb  02_classification_baseline.ipynb  02_retrieval_experiments.ipynb  03_prompt_engineering.ipynb  04_evaluation_metrics.ipynb  05_peft_lora_sandbox.ipynb
src/: eval.py  infer.py  run_api.py  train.py  tune.py
src/api/: metrics.py  schemas.py
src/api/rest/: dependencies.py  limiter.py  middlewares.py  server.py
src/api/rest/endpoints/: chat.py  classify.py  health.py
src/api/tg_bot/: bot_local.py  bot_webhook.py  states.py
src/api/tg_bot/handlers/: chat.py
src/api/tg_bot/keyboards/: reply.py
src/core/data/: __init__.py  builder.py  cleaners.py  collators.py  datasets.py  fetcher.py
src/core/models/: builder.py  tokenization.py
src/core/rag/: indexer.py  retriever.py
src/jobs/: batch_analytics.py  maintenance.py  promote.py  rag_update_job.py
src/sdk/: inference.py
src/training/: module.py  tuner.py
src/utils/: config_schema.py  hf_hub.py  hydra_utils.py  mlflow_requirements.py  notebook_setup.py  torch_utils.py
tests/: conftest.py
tests/api/: test_chat.py  test_classifier.py  test_endpoints.py  test_schemas.py
tests/core/: test_cleaners.py  test_collators.py
tests/dags/: conftest.py  test_dag_config.py  test_dag_contracts.py  test_dag_structure.py
tests/data/: test_payloads.json
tests/integration/: test_rag_pipeline.py
tests/jobs/: test_eval_exit_code.py  test_fetcher.py
tests/sdk/: test_inference.py
tests/training/: test_module.py
tests/unit/: test_api_schemas.py  test_chat_endpoint.py  test_cleaner.py  test_health_endpoint.py  test_prompt_manager.py
