# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "industrial_nlp_template"
version = "1.0.0"
description = "Production-ready NLP framework with Hydra, RAG, FastAPI and uv"
readme = "README.md"
requires-python = ">=3.10"

# ==========================================
# БАЗОВЫЙ МИНИМУМ (Ядро)
# Устанавливается всегда. Нужен для любой задачи.
# ==========================================
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "hydra-core>=1.3.2",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "accelerate>=0.27.0",
    "python-json-logger>=2.0.0" # <-- ДОБАВЛЕНО для структурированного логирования
]

[project.optional-dependencies]

# ==========================================
# ГРУППА 1: ОБУЧЕНИЕ (Training)
# ==========================================
training = [
    "pytorch-lightning>=2.2.0",
    "mlflow>=2.10.0",
    "torchmetrics>=1.3.0",
    "peft>=0.8.2",
    "bitsandbytes>=0.42.0",
    "datasets>=2.17.0"
]

# ==========================================
# ГРУППА 2: RAG (Векторные базы и Поиск)
# ==========================================
rag = [
    "llama-index-core>=0.10.0",
    "llama-index-embeddings-huggingface>=0.1.3",
    "llama-index-vector-stores-faiss>=0.1.1",
    "llama-index-vector-stores-qdrant>=0.1.2",
    "llama-index-readers-file>=0.1.4",
    "faiss-cpu>=1.7.4",
    "qdrant-client>=1.7.1"
]

# ==========================================
# ГРУППА 3: INFERENCE (API и Боты)
# ==========================================
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiogram>=3.4.0",
    "aiohttp>=3.9.3",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "prometheus-client>=0.20.0",
    "slowapi>=0.1.9", # <-- ДОБАВЛЕНО для Rate Limiting
    "redis>=5.0.0"    # <-- ДОБАВЛЕНО для масштабирования сессий aiogram
]

# ==========================================
# ГРУППА 4: ОРКЕСТРАЦИЯ (Airflow)
# Ставится для локальной разработки и тестирования DAG-ов
# ==========================================
orchestration = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-cncf-kubernetes>=8.0.0",
    "apache-airflow-providers-slack>=8.6.0"
]

# ==========================================
# ГРУППА 5: EDA (EDA, Notebooks)
# ==========================================

experimentation = [
    "jupyterlab>=4.1.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "evaluate>=0.4.0"
]

# ==========================================
# ГРУППА 6: РАЗРАБОТКА (Dev Tools)
# ==========================================
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "industrial-nlp-template[experimentation]" # Наследуем всё для экспериментов
]

# ==========================================
# ГРУППА 7: HPO (Подбор гиперпараметров)
# Вынесено отдельно, чтобы не утяжелять базовый training
# ==========================================
tune = [
    "optuna>=3.6.0",
    "optuna-integration>=3.6.0" # Важно: интеграции с MLflow и PL теперь живут в отдельном пакете
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# ==========================================
# НАСТРОЙКИ ЛИНТЕРА RUFF
# ==========================================
[tool.ruff]
# Общие настройки
line-length = 100
target-version = "py310"

# Исключаем папки с данными, весами и кэшем из проверки
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "build",
    "dist",
    "venv",
    "mlruns",     # Папка MLflow
    "models",     # Веса моделей
    "data",       # Сырые документы
]

[tool.ruff.lint]
# Включаем самые полезные наборы правил:
select = [
    "E",  # pycodestyle errors (ошибки стиля PEP8)
    "W",  # pycodestyle warnings (предупреждения стиля)
    "F",  # pyflakes (неиспользуемые переменные и импорты)
    "I",  # isort (автоматическая сортировка импортов)
    "N",  # pep8-naming (проверка имен переменных и классов)
    "UP", # pyupgrade (обновление старого синтаксиса на новый из Python 3.10)
    "B",  # flake8-bugbear (поиск потенциальных багов и уязвимостей)
    "C4", # flake8-comprehensions (оптимизация list/dict comprehensions)
]

# Отключаем правила, которые мешают в ML и FastAPI:
ignore = [
    "B008", # ОЧЕНЬ ВАЖНО ДЛЯ FASTAPI: разрешает вызовы функций в аргументах (например, Depends(get_db))
    "E501", # Игнорируем жесткое ограничение длины строки (полезно для длинных промптов и ссылок)
]

# Позволяем Ruff автоматически удалять неиспользуемые импорты (F401)
unfixable = []

[tool.ruff.lint.isort]
# Настройки сортировки импортов
known-first-party = ["src"] # Ruff будет знать, что импорты из src - это наш локальный код
lines-after-imports = 2     # Две пустые строки после блока импортов (стандарт PEP8)

[tool.ruff.format]
# Настройки автоформатирования кода
quote-style = "double"            # Используем двойные кавычки для строк
indent-style = "space"            # Отступы пробелами, а не табами
skip-magic-trailing-comma = false # Умное форматирование списков и словарей

[tool.hatch.build.targets.wheel]
packages = ["src"]