# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fake_news_detector"
version = "1.0.0"
description = "Production-ready NLP Classification framework with Hydra, FastAPI and uv"
readme = "README.md"
requires-python = ">=3.10"

# ==========================================
# БАЗОВЫЙ МИНИМУМ (Ядро)
# ==========================================
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "hydra-core>=1.3.2",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "accelerate>=0.27.0",
    "python-json-logger>=2.0.0"
]

[project.optional-dependencies]

# ==========================================
# ГРУППА 1: ОБУЧЕНИЕ (Training)
# ==========================================
training = [
    "pytorch-lightning>=2.2.0",
    "mlflow>=2.10.0",
    "torchmetrics>=1.3.0",
    "peft>=0.8.2",
    "bitsandbytes>=0.42.0",
    "datasets>=2.17.0"
]

# ==========================================
# ГРУППА 2: INFERENCE (API и Боты)
# ==========================================
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiogram>=3.4.0",
    "aiohttp>=3.9.3",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "prometheus-client>=0.20.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0"    
]

# ==========================================
# ГРУППА 3: ОРКЕСТРАЦИЯ (Airflow)
# ==========================================
orchestration = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-cncf-kubernetes>=8.0.0",
    "apache-airflow-providers-slack>=8.6.0"
]

# ==========================================
# ГРУППА 4: EDA (EDA, Notebooks)
# ==========================================
experimentation = [
    "jupyterlab>=4.1.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "evaluate>=0.4.0"
]

# ==========================================
# ГРУППА 5: РАЗРАБОТКА (Dev Tools)
# ==========================================
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "fake-news-detector[experimentation]" # Обновлено имя пакета
]

# ==========================================
# ГРУППА 6: HPO (Подбор гиперпараметров)
# ==========================================
tune = [
    "optuna>=3.6.0",
    "optuna-integration>=3.6.0" 
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# ==========================================
# НАСТРОЙКИ ЛИНТЕРА RUFF
# ==========================================
[tool.ruff]
# Общие настройки
line-length = 100
target-version = "py310"

# Исключаем папки с данными, весами и кэшем из проверки
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "build",
    "dist",
    "venv",
    "mlruns",     # Папка MLflow
    "models",     # Веса моделей
    "data",       # Сырые документы
]

[tool.ruff.lint]
# Включаем самые полезные наборы правил:
select = [
    "E",  # pycodestyle errors (ошибки стиля PEP8)
    "W",  # pycodestyle warnings (предупреждения стиля)
    "F",  # pyflakes (неиспользуемые переменные и импорты)
    "I",  # isort (автоматическая сортировка импортов)
    "N",  # pep8-naming (проверка имен переменных и классов)
    "UP", # pyupgrade (обновление старого синтаксиса на новый из Python 3.10)
    "B",  # flake8-bugbear (поиск потенциальных багов и уязвимостей)
    "C4", # flake8-comprehensions (оптимизация list/dict comprehensions)
]

# Отключаем правила, которые мешают в ML и FastAPI:
ignore = [
    "B008", # ОЧЕНЬ ВАЖНО ДЛЯ FASTAPI: разрешает вызовы функций в аргументах (например, Depends(get_db))
    "E501", # Игнорируем жесткое ограничение длины строки (полезно для длинных промптов и ссылок)
]

# Позволяем Ruff автоматически удалять неиспользуемые импорты (F401)
unfixable = []

[tool.ruff.lint.isort]
# Настройки сортировки импортов
known-first-party = ["src"] # Ruff будет знать, что импорты из src - это наш локальный код
lines-after-imports = 2     # Две пустые строки после блока импортов (стандарт PEP8)

[tool.ruff.format]
# Настройки автоформатирования кода
quote-style = "double"            # Используем двойные кавычки для строк
indent-style = "space"            # Отступы пробелами, а не табами
skip-magic-trailing-comma = false # Умное форматирование списков и словарей

[tool.hatch.build.targets.wheel]
packages = ["src"]